[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/font/Retro_Gaming.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/GUI.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 19
font_data = ExtResource( 1 )

[node name="GUI" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="."]
anchor_left = 0.015
anchor_top = 0.034
anchor_right = 0.38
anchor_bottom = 0.096
margin_left = 0.199999
margin_top = 0.279999
margin_right = 0.399963
margin_bottom = 0.32

[node name="HBoxContainer" type="HBoxContainer" parent="AspectRatioContainer"]
margin_left = 317.0
margin_right = 384.0
margin_bottom = 67.0

[node name="LabelHP" type="Label" parent="AspectRatioContainer/HBoxContainer"]
margin_top = 21.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1

[node name="LabelWave" type="Label" parent="AspectRatioContainer/HBoxContainer"]
margin_left = 4.0
margin_top = 21.0
margin_right = 4.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1

[node name="LabelKills" type="Label" parent="AspectRatioContainer/HBoxContainer"]
margin_left = 8.0
margin_top = 21.0
margin_right = 8.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1
